Prueba popup xhdpi

--- a/indexDEMO.html
+++ b/indexDEMO.html
@@ -24,7 +24,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" href="css/jquery.mobile-1.4.0.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+        <link rel="stylesheet" type="text/css" href="css/estilosxhdpi.css" />
         <link rel="stylesheet" href="pe-icon-7-stroke/css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/helper.css">
         <script src="js/jquery-1.10.0.js"></script>
@@ -232,7 +232,7 @@
  <div role="main" class="ui-content">
     <h2>Seleccione el examen que desee realizar</h2>
     <ul data-role="listview" data-inset="true" id="examenes">    
-      <li><a href="#popupDialog" rel="1" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-right ui-icon-carat-r examen" title="Hacer el examen">Demo</a></li>
+      <li><a href="#popupDialog" rel="1" data-rel="popup" data-position-to="window" data-transition="pop" class="ui-btn ui-btn-icon-right ui-icon-carat-r examen" title="Hacer el examen">Demo</a></li>
       <li><a href="#popupDialog" rel="1" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-right ui-icon-carat-r examen" title="Hacer el examen">Examen de ingreso 2014</a></li>
       <li><a href="#popupDialog" rel="1" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-right ui-icon-carat-r examen" title="Hacer el examen">Demo</a></li>
       <li><a href="#popupDialog" rel="1" data-rel="popup" data-position-to="window" data-transition="pop" aria-haspopup="true" aria-owns="purchase" aria-expanded="false" class="ui-btn ui-btn-icon-right ui-icon-carat-r examen" title="Hacer el examen">Examen de ingreso 2014</a></li>
@@ -240,8 +240,8 @@
 
 </div><!-- /content -->
 <!--CONFIRMACION POPUP-->
-<div data-role="popup" id="popupDialog" data-overlay-theme="b" data-theme="b" data-dismissible="false">
-    <div data-role="header" data-theme="b">
+<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false">
+    <div data-role="header" data-theme="a">
     <h1>Comenzar Exámen</h1>
     </div>
     <div role="main" class="ui-content">
