--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 
           <p id="estadoUpdate"></p>
           <a href="#" class="ui-btn ui-icon-alert ui-btn-icon-left ui-shadow ui-corner-all actualizar">Realizar Update</a>
-          <div data-role="popup" id="popupUpdate" data-overlay-theme="b" data-theme="b" data-dismissible="false">
-            <div data-role="header" data-theme="b">
+          <div data-role="popup" id="popupUpdate" data-overlay-theme="z" data-theme="z" data-dismissible="false">
+            <div data-role="header" data-theme="z">
               <h1>Actualización disponible</h1>
             </div>
             <div role="main" class="ui-content">
@@ -277,7 +277,7 @@
         </form>
 
     </div><!-- /content -->
-    <div data-role="popup" id="popupReporte" data-theme="a" class="ui-corner-all">
+    <div data-role="popup" id="popupReporte" data-overlay-theme="z" data-theme="z" class="ui-corner-all">
       <div data-role="header">
         <h1>Notificar Error</h1>
       </div>
@@ -295,7 +295,7 @@
         </form>
       </div>
     </div>
-    <div data-role="popup" id="popupPuntaje" data-overlay-theme="b" data-theme="b" data-dismissible="false">
+    <div data-role="popup" id="popupPuntaje" data-overlay-theme="z" data-theme="z" data-dismissible="false">
       <div data-role="header">
       <h1>Exámen Finalizado</h1>
       </div>
@@ -328,7 +328,7 @@
       <div id="evaluaciones">
   
       </div>
-        <div data-role="popup" id="popupConfirm" data-theme="b">
+        <div data-role="popup" id="popupConfirm" data-theme="z">
          <div data-role="header">
           <h1>Exportar a PDF</h1>
           </div>
