--- a/indexDEMO.html
+++ b/indexDEMO.html
@@ -240,8 +240,8 @@
 
 </div><!-- /content -->
 <!--CONFIRMACION POPUP-->
-<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="a" data-dismissible="false">
-    <div data-role="header" data-theme="a">
+<div data-role="popup" id="popupDialog" data-overlay-theme="z" data-theme="z" data-dismissible="false">
+    <div data-role="header" data-theme="z">
     <h1>Comenzar Exámen</h1>
     </div>
     <div role="main" class="ui-content">
