--- a/index.html
+++ b/index.html
@@ -362,10 +362,8 @@
       <div class="contenedor">
       <select name="selExamen" id="selExamen" data-native-menu="false">
         <option>Seleccione un examen:</option>
-        <option value="a">uno</option>
-        <option value="b">dos</option>
       </select>
-      <table data-role="table" id="table-custom-2" data-mode="columntoggle" class="table-stroke ui-responsive" data-column-btn-theme="b" data-column-btn-text="Columnas" data-column-popup-theme="a">
+      <table data-role="table" id="table-custom-2" data-mode="column" class="table-stroke ui-responsive" data-column-btn-theme="b" data-column-popup-theme="a">
      <thead>
        <tr>
          <th data-priority="2">Puesto</th>
