--- a/indexDEMO.html
+++ b/indexDEMO.html
@@ -24,7 +24,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" href="css/jquery.mobile-1.4.0.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/estilosxhdpi.css" />
+        <link rel="stylesheet" type="text/css" href="css/estilos.css" />
         <link rel="stylesheet" href="pe-icon-7-stroke/css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/helper.css">
         <script src="js/jquery-1.10.0.js"></script>
@@ -401,22 +401,22 @@
         <option value="a">uno</option>
         <option value="b">dos</option>
       </select>
-      <table data-role="table" id="table-custom-2" data-mode="columntoggle" class="ui-body-d ui-shadow table-stripe ui-responsive" data-column-btn-theme="b"  data-column-popup-theme="a">
+      <table data-role="table" class="table-stroke ui-responsive" data-mode="column">
      <thead>
        <tr>
-         <th>Puesto</th>
+         <th data-priority="2">Puesto</th>
          <th>Usuario</th>
-         <th>Puntaje</th>
-         <th><abbr title="Tiempo">Tiempo</abbr></th>
+         <th data-priority="3">Puntaje</th>
+         <th data-priority="1"><abbr title="Tiempo">Tiempo</abbr></th>
        </tr>
      </thead>
      <tbody id="resRanking">
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
-       <tr><th>12</th><th>pepe p.</th><th>35</th><th>0:00:00</th></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
+       <tr><th>12</th><td>pepe p.</td><td>35</td><td>0:00:00</td></tr>
      </tbody>
    </table>
  </div>
