--- a/index.html
+++ b/index.html
@@ -429,6 +429,12 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
+            $.mobile.loading( 'show', {
+            text: 'Actualizando',
+            textVisible: true,
+            theme: 'a',
+            html: ""
+        });
         </script>
     </body>
 </html>
