--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
    <p align="right" class="firma">Powered by <span></span></p>
 </div><!-- /footer -->
 </div><!-- /page -->
+
 <div data-role="page" id="pageexamenes" style="background-color:#fff">
  <div data-role="header" data-theme="a">
      <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></span></a>
@@ -349,6 +350,24 @@
 </div>
 </div>
 <!-- /page -->
+<div data-role="page" id="pageprerank" style="background-color:#fff">
+ <div data-role="header" data-theme="a">
+     <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></span></a>
+     <h1></h1>
+     <a href="#" class="ui-btn-right closeSession salir"><span class="pe-7s-delete-user"></span></a>
+ </div><!-- /header -->
+
+ <div role="main" class="ui-content">
+    <h2>Seleccione un examen para ver su ranking</h2>
+    <ul data-role="listview" data-inset="true" id="examenes">    
+    </ul>
+
+</div><!-- /content -->
+<div data-role="footer" data-theme="b" data-position="fixed">
+  <p align="right" class="firma">Powered by <span></span></p>
+</div>
+</div>
+
 <div data-role="page" id="pageranking" style="background-color:#fff">
 
  <div data-role="header">
@@ -360,9 +379,6 @@
      <div role="main" class="ui-content">
       <h2 style="margin-top:20px">Ranking</h2>
       <div class="contenedor">
-      <select name="selExamen" id="selExamen" data-native-menu="false">
-        <option>Seleccione un examen:</option>
-      </select>
       <table data-role="table" id="table-custom-2" data-mode="column" class="table-stroke ui-responsive" data-column-btn-theme="b" data-column-popup-theme="a">
      <thead>
        <tr>
@@ -380,7 +396,8 @@
 </div><!-- /content -->
 
 <div data-role="footer" data-theme="b" data-position="fixed">
-  <p align="right" class="firma">Powered by <span></span></p>
+  <a href="#" data-rel="back" class="volver" data-theme="a"><i class="pe-7s-left-arrow pe-fw"></i></a>
+   <p align="right" class="firma">Powered by <span></span></p>
 </div>
 </div>
 <!-- /page -->
