--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
      <div role="main" class="ui-content">
       <h2 style="margin-top:20px">Ranking</h2>
       <div class="contenedor">
+        <p class='error' id="hay">Por el momento no se ha establecido un ranking para el examen seleccionado.</p>
       <table data-role="table" id="table-custom-2" data-mode="column" class="table-stroke ui-responsive" data-column-btn-theme="b" data-column-popup-theme="a">
      <thead>
        <tr>
