Creación de subcategorías

--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
 
  <div role="main" class="ui-content">
     <h2>Seleccione el examen que desee realizar</h2>
-    <ul data-role="listview" data-inset="true" id="examenes">    
-    </ul>
+    <div data-role="collapsibleset" data-theme="a" data-content-theme="b" id="examenes">
+      
+    </div>
 
 </div><!-- /content -->
 <!--CONFIRMACION POPUP-->
