Se agregó pantalla de carga

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
 </head>
 <body>
   <div id="fb-root"></div>
+  <div data-role="page" id="pageloading">
+
+     <div data-role="header" data-theme="b"></div><!-- /header -->
+
+     <div role="main" class="ui-content" >
+     
+     </div><!-- /content -->
+
+   <div data-role="footer" data-theme="b" data-position="fixed">
+    <p align="right" class="firma">Powered by <span></span></p>
+</div><!-- /footer -->
+</div><!-- /page -->
+
     <div data-role="page" id="pageadmin">
 
      <div data-role="header" data-theme="b"></div><!-- /header -->
