Se agregó recupero Pass

--- a/main.html
+++ b/main.html
@@ -91,9 +91,11 @@
          <input type="text" name="email" id="email" value="" placeholder="E-mail">
         <input type="password" data-clear-btn="true" name="pass" id="pass" value="" placeholder="Contraseña">
           <p id="erlogin" class="error"></p>
+          <p id="glogin" class="good"></p>
         </form>
         <a href="#" id="login" class="ui-btn ui-corner-all">Ingresar</a>
         <a href="#pageregistrarse" class="registrobtn ui-btn ui-corner-all">Registrarse</a>
+        <p><a href="" class="recuperar leer">Olvidé mi contraseña</a></p>
         
       </div>
     </div>
