--- a/main.html
+++ b/main.html
@@ -373,8 +373,8 @@
 
  <div role="main" class="ui-content">
     <h2>Seleccione un examen para ver su ranking</h2>
-    <ul data-role="listview" data-inset="true" id="listarank">    
-    </ul>
+    <div id="rank">    
+    </div>
 
 </div><!-- /content -->
 <div data-role="footer" data-theme="b" data-position="fixed">
