Modificacion de estetica en examenes

--- a/main.html
+++ b/main.html
@@ -249,7 +249,7 @@
 
  <div role="main" class="ui-content">
     <h2>Seleccione el examen que desee realizar</h2>
-    <div data-role="collapsibleset" data-theme="a" data-content-theme="b" id="examenes">
+    <div id="examenes">
       
     </div>
 
