--- a/main.html
+++ b/main.html
@@ -85,7 +85,7 @@
 
 <div data-role="page" id="pageregistrarse">
 
- <div data-role="header" data-theme="b"><h1></h1></div><!-- /header -->
+ <div data-role="header" data-theme="b" data-position="fixed"><h1></h1></div><!-- /header -->
 
  <div role="main" class="ui-content" >
 
@@ -130,7 +130,7 @@
 
 <div data-role="page" id="pageterminos">
 
- <div data-role="header" data-theme="b"><h1></h1></div><!-- /header -->
+ <div data-role="header" data-theme="b" data-position="fixed"><h1></h1></div><!-- /header -->
 
  <div role="main" class="ui-content" >
 <h2>Términos y condiciones de uso de MedChoice (propiedad de AppChoice)</h2>
@@ -218,7 +218,7 @@
 </div><!-- /page -->
 
 <div data-role="page" id="pageexamenes" style="background-color:#fff">
- <div data-role="header" data-theme="b">
+ <div data-role="header" data-theme="b" data-position="fixed">
      <a href="#mypanel" class="ui-btn-left options" data-theme="a"><span class="pe-7s-menu"></span></a>
      <h1></h1>
      <a href="#" class="ui-btn-right closeSession salir" data-theme="a"><span class="pe-7s-delete-user"></span></a>
@@ -309,7 +309,7 @@
 </div><!-- /footer -->
 </div><!-- /page -->
 <div data-role="page" id="pagescores" style="background-color:#fff">
-      <div data-role="header" data-theme="b">
+      <div data-role="header" data-theme="b" data-position="fixed">
        <a href="#mypanel" class="ui-btn-left options" data-theme="a"><span class="pe-7s-menu"></a>
        <h1></h1>
        <a href="#" class="ui-btn-right closeSession salir" data-theme="a"><span class="pe-7s-delete-user"></a>
@@ -342,7 +342,7 @@
 </div>
 <!-- /page -->
 <div data-role="page" id="pageprerank" style="background-color:#fff">
- <div data-role="header" data-theme="a">
+ <div data-role="header" data-theme="b" data-position="fixed">
      <a href="#mypanel" class="ui-btn-left options" data-theme="a"><span class="pe-7s-menu"></span></a>
      <h1></h1>
      <a href="#" class="ui-btn-right closeSession salir" data-theme="a"><span class="pe-7s-delete-user"></span></a>
@@ -361,7 +361,7 @@
 
 <div data-role="page" id="pageranking" style="background-color:#fff">
 
- <div data-role="header" data-theme="b">
+ <div data-role="header" data-theme="b" data-position="fixed">
        <a href="#mypanel" class="ui-btn-left options" data-theme="a"><span class="pe-7s-menu"></a>
        <h1></h1>
        <a href="#" class="ui-btn-right closeSession salir" data-theme="a"><span class="pe-7s-delete-user"></a>
@@ -395,7 +395,7 @@
 <!-- /page -->
 <div data-role="page" id="pageconsultas" style="background-color:#fff">
 
-      <div data-role="header" data-theme="b">
+      <div data-role="header" data-theme="b" data-position="fixed">
        <a href="#mypanel" class="ui-btn-left options" data-theme="a"><span class="pe-7s-menu"></a>
        <h1></h1>
        <a href="#" class="ui-btn-right closeSession salir" data-theme="a"><span class="pe-7s-delete-user"></a>
